--- a/packages/webviz-core/package.json
+++ b/packages/webviz-core/package.json
@@ -85,6 +85,7 @@
     "rosbag": "2.6.3",
     "roslib": "1.1.0",
     "sanitize-html": "1.20.0",
+    "scene-viewer-panels": "^1.0.0",
     "scroll-into-view-if-needed": "2.2.24",
     "shallowequal": "1.1.0",
     "sharedworker-loader": "2.1.1",
@@ -110,5 +111,8 @@
   },
   "importjs": {
     "isRoot": false
+  },
+  "volta": {
+    "node": "12.22.7"
   }
 }
